syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package qctrl;

service QueueClient {
	rpc EnqueueAsync (Message) returns (Result);
	rpc ReadAsync (google.protobuf.Empty) returns (Message);
	rpc AckAsync (Message) returns (Result);
}

message Message {
	string id = 1;
	google.protobuf.Timestamp timestamp = 2;
	string body = 3;
}

message Result {
	bool succeed = 1;
}